prevent scrolling on mobile

--- a/CSS/css.css
+++ b/CSS/css.css
@@ -130,7 +130,7 @@ body.Dark .wave {
 }
 
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 375px) {
     h1 {
         position: absolute;
         text-align: center;
@@ -138,19 +138,24 @@ body.Dark .wave {
         right:1vw;
         left: .5vw;
         top:20vh;
+
     }
     #Info {
         font-size: 20px;
+
     }
     h3{
         left:1px;
         text-align: center;
         font-size: 12px;
+
     }
     .wave {
         top: -155px;
+
     }
-    body {
+    html,body {
+        max-width: 100%;
         overflow-y: auto;
         overflow-x: hidden;
     }
